--- a/refrence.html
+++ b/refrence.html
@@ -25,7 +25,7 @@
     <aside class=" col-2 overflow-auto scrollPictures">
    <!-- use different sizes lightbox from bootstrap for these images (https://mdbootstrap.com/docs/standard/components/lightbox/)
    if unavailable, use Mix&Match grid system (https://getbootstrap.com/docs/4.2/layout/grid/) -->  
-      <img style="max-width: 100%" src="/public/images/hangers/hanger1.png" class="clothingItem"></figure>
+      <img style="max-width: 100%" src="/public/images/hangers/hanger1.png" class="clothingItem">
       <img style="max-width: 100%" src="/public/images/hangers/hanger2.png" class="clothingItem">
       <img style="max-width: 100%" src="/public/images/hangers/hanger3.png" class="clothingItem">
       <img style="max-width: 100%" src="/public/images/hangers/hanger4.png" class="clothingItem">
